--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -20,7 +20,7 @@ body {
 #unity-canvas {
     width: 100%;
     height: 100%;
-    background: #231F20;
+    background: #fafafa;
 }
 #loading-cover {
     position: absolute;
@@ -43,7 +43,8 @@ body {
     text-align: center;
 }
 #unity-logo img {
-    max-width: 80%;
+    max-width: max(60%, 256px);
+    margin-left: 16px;
 }
 #unity-progress-bar-empty {
     width: 80%;
